# lnkb

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
cmake/: FetchGCEM.cmake
lib/: CMakeLists.txt  lnkb.h
lib/lnkb/: bit.h  ease.hpp  macro.h  math.h  meta.h
lib/lnkb/bit/: intrinsics.hpp
lib/lnkb/macro/: feature.hpp  keywords.hpp
lib/lnkb/math/: constants.hpp  easing.hpp  easings.hpp  functions.hpp  numerics.hpp
lib/lnkb/meta/: concepts.hpp  traits.hpp  typedefs.hpp
vis/: CMakeLists.txt  main.cpp
